# pyads-agile

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  docs-pages.yml  python-publish.yml
doc/: conf.py  installation.md  pyads.rst
doc/documentation/: connection.rst  features.rst  index.rst  stepchain.rst
examples/twincat_reference/: README.md  pyads_agile_reference.st
examples/twincat_reference/project/: Test_PyAdsAgile.tpzip
src/pyads/: __init__.py  ads.py  async_connection.py  connection.py  constants.pyi  rpc_interface.py
tests/: conftest.py  test_async_connection.py  test_async_connection_fake_integration.py  test_connection_class.py  test_plc_ams.py  test_rpc_interface.py  test_symbol.py  test_testserver.py
tests/__pycache__/: conftest.cpython-314-pytest-9.0.2.pyc.60004
tests/integration_real/: plc_symbols_template.st  real_runtime.toml  test_real_async_runtime.py  test_real_runtime.py
tests/integration_real/__pycache__/: test_real_async_runtime.cpython-314-pytest-9.0.2.pyc.2236
